--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,14 +5,14 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林), server: vau1.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vau1.0bad.com}}
-  - {name: 🇨🇳 中国-467.6KB/s(Youtube:不良林), server: 36.134.156.5, port: 65079, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
-  - {name: 🇺🇸 美国-5.75MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-7.53MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-554.0KB/s(Youtube:不良林), server: 120.233.150.146, port: 65073, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 🇨🇳 中国-549.5KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65088, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
+  - {name: 🇯🇵 日本-7.17MB/s(Youtube:不良林), server: supernortheast.xn--mesv7f5toqlp.club, port: 12001, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supernortheast.xn--mesv7f5toqlp.club, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-222.0KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65076, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-4.20MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-486.7KB/s(Youtube:不良林), server: 116.129.254.177, port: 65048, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
   - {name: 🇨🇳 中国-184.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-1.84MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-827.5KB/s(Youtube:不良林), server: 51.38.118.42, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇫🇷 法国-1.45MB/s(Youtube:不良林), server: 51.38.118.42, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇫🇷 法国-1.39MB/s(Youtube:不良林), server: 51.38.118.42, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇺🇸 美国-5.41MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
 proxy-groups:
@@ -21,14 +21,14 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-467.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-554.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-549.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-7.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-222.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-486.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-184.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.84MB/s(Youtube:不良林)
-      - 🇫🇷 法国-827.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.45MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.39MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
@@ -36,14 +36,14 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-467.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-554.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-549.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-7.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-222.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-486.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-184.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.84MB/s(Youtube:不良林)
-      - 🇫🇷 法国-827.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.45MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.39MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
@@ -52,14 +52,14 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-467.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-554.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-549.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-7.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-222.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-486.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-184.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.84MB/s(Youtube:不良林)
-      - 🇫🇷 法国-827.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.45MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.39MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
@@ -72,14 +72,14 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-467.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-554.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-549.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-7.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-222.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-486.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-184.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.84MB/s(Youtube:不良林)
-      - 🇫🇷 法国-827.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.45MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.39MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
   - name: 📲 电报信息
@@ -87,14 +87,14 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-467.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-554.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-549.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-7.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-222.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-486.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-184.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.84MB/s(Youtube:不良林)
-      - 🇫🇷 法国-827.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.45MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.39MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
@@ -103,14 +103,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-467.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-554.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-549.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-7.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-222.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-486.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-184.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.84MB/s(Youtube:不良林)
-      - 🇫🇷 法国-827.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.45MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.39MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
   - name: 🎯 全球直连
@@ -128,14 +128,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-467.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-554.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-549.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-7.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-222.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-486.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-184.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.84MB/s(Youtube:不良林)
-      - 🇫🇷 法国-827.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.45MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.39MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
 rules:
