--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,15 +5,15 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
+  - {name: 🇨🇳 中国-293.4KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65073, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-1.76MB/s(Youtube:不良林), server: 111.45.29.75, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-467.6KB/s(Youtube:不良林), server: 36.134.156.5, port: 65079, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
+  - {name: 🇨🇳 中国-1.05MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-549.5KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65088, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
-  - {name: 🇯🇵 日本-7.17MB/s(Youtube:不良林), server: supernortheast.xn--mesv7f5toqlp.club, port: 12001, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supernortheast.xn--mesv7f5toqlp.club, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-222.0KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65076, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-4.20MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-486.7KB/s(Youtube:不良林), server: 116.129.254.177, port: 65048, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
   - {name: 🇨🇳 中国-184.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-1.84MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇫🇷 法国-1.45MB/s(Youtube:不良林), server: 51.38.118.42, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇫🇷 法国-1.39MB/s(Youtube:不良林), server: 51.38.118.42, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇫🇷 法国-1.44MB/s(Youtube:不良林), server: 51.38.118.42, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇺🇸 美国-5.41MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
@@ -21,30 +21,30 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇨🇳 中国-293.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-467.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
       - 🇨🇳 中国-549.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-7.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-222.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-486.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-184.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.84MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.45MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.39MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
+      - 🇨🇳 中国-293.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-467.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
       - 🇨🇳 中国-549.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-7.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-222.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-486.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-184.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.84MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.45MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.39MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
@@ -52,15 +52,15 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇨🇳 中国-293.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-467.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
       - 🇨🇳 中国-549.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-7.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-222.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-486.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-184.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.84MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.45MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.39MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
@@ -72,30 +72,30 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
+      - 🇨🇳 中国-293.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-467.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
       - 🇨🇳 中国-549.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-7.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-222.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-486.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-184.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.84MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.45MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.39MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
+      - 🇨🇳 中国-293.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-467.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
       - 🇨🇳 中国-549.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-7.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-222.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-486.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-184.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.84MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.45MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.39MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
@@ -103,15 +103,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇨🇳 中国-293.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-467.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
       - 🇨🇳 中国-549.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-7.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-222.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-486.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-184.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.84MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.45MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.39MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
@@ -128,15 +128,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇨🇳 中国-293.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-467.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
       - 🇨🇳 中国-549.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-7.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-222.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-486.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-184.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.84MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.45MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.39MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
