--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,12 +5,12 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-293.4KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65073, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-346.1KB/s(Youtube:不良林), server: 120.233.150.146, port: 65079, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
   - {name: 🇨🇳 中国-1.76MB/s(Youtube:不良林), server: 111.45.29.75, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-467.6KB/s(Youtube:不良林), server: 36.134.156.5, port: 65079, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
-  - {name: 🇨🇳 中国-1.05MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-549.5KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65088, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-184.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-1.52MB/s(Youtube:不良林), server: 51.38.118.42, port: 813, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇯🇵 日本-3.37MB/s(Youtube:不良林), server: 85.208.108.19, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇨🇦 加拿大-1013.8KB/s(Youtube:不良林), server: 196.247.59.154, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-1.29MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-1.84MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇫🇷 法国-1.45MB/s(Youtube:不良林), server: 51.38.118.42, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇫🇷 法国-1.44MB/s(Youtube:不良林), server: 51.38.118.42, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
@@ -21,12 +21,12 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-293.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-346.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-467.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-549.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-184.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.52MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.37MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1013.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.29MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.84MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.45MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
@@ -36,12 +36,12 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-293.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-346.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-467.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-549.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-184.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.52MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.37MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1013.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.29MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.84MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.45MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
@@ -52,12 +52,12 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-293.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-346.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-467.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-549.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-184.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.52MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.37MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1013.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.29MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.84MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.45MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
@@ -72,12 +72,12 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-293.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-346.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-467.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-549.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-184.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.52MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.37MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1013.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.29MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.84MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.45MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
@@ -87,12 +87,12 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-293.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-346.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-467.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-549.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-184.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.52MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.37MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1013.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.29MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.84MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.45MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
@@ -103,12 +103,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-293.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-346.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-467.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-549.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-184.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.52MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.37MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1013.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.29MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.84MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.45MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
@@ -128,12 +128,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-293.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-346.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-467.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-549.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-184.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.52MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.37MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1013.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.29MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.84MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.45MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
