--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-346.1KB/s(Youtube:不良林), server: 120.233.150.146, port: 65079, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
-  - {name: 🇨🇳 中国-1.76MB/s(Youtube:不良林), server: 111.45.29.75, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-1.52MB/s(Youtube:不良林), server: 51.38.118.42, port: 813, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇯🇵 日本-3.37MB/s(Youtube:不良林), server: 85.208.108.19, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇨🇦 加拿大-1013.8KB/s(Youtube:不良林), server: 196.247.59.154, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-1.29MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.84MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-1.45MB/s(Youtube:不良林), server: 51.38.118.42, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇫🇷 法国-1.44MB/s(Youtube:不良林), server: 51.38.118.42, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-5.41MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.70MB/s(Youtube:不良林), server: crj749919467.n-tmd.com, port: 31502, type: vmess, uuid: 9b4f0258-1127-41d9-f30a-469e80737327, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-924.5KB/s(Youtube:不良林), server: 51.38.118.42, port: 819, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-2.84MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20712, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-549.5KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65088, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-802.6KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.52MB/s(Youtube:不良林), server: 167.88.61.14, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇺🇸 美国-2.72MB/s(Youtube:不良林), server: 172.99.188.71, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇺🇸 美国-3.44MB/s(Youtube:不良林), server: 38.143.66.20, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇺🇸 美国-3.47MB/s(Youtube:不良林), server: 38.143.66.20, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-3.79MB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-346.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.52MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.37MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1013.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.84MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.45MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.70MB/s(Youtube:不良林)
+      - 🇫🇷 法国-924.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-549.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-802.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.79MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-346.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.52MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.37MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1013.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.84MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.45MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.70MB/s(Youtube:不良林)
+      - 🇫🇷 法国-924.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-549.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-802.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.79MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-346.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.52MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.37MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1013.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.84MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.45MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.70MB/s(Youtube:不良林)
+      - 🇫🇷 法国-924.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-549.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-802.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.79MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-346.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.52MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.37MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1013.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.84MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.45MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.70MB/s(Youtube:不良林)
+      - 🇫🇷 法国-924.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-549.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-802.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.79MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-346.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.52MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.37MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1013.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.84MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.45MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.70MB/s(Youtube:不良林)
+      - 🇫🇷 法国-924.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-549.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-802.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.79MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-346.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.52MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.37MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1013.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.84MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.45MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.70MB/s(Youtube:不良林)
+      - 🇫🇷 法国-924.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-549.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-802.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.79MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-346.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.52MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.37MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1013.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.84MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.45MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.70MB/s(Youtube:不良林)
+      - 🇫🇷 法国-924.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-549.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-802.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.79MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
